[package]
name = "radixtree"
version = "0.1.0"
authors = ["Rüdiger Klaehn <rklaehn@protonmail.com>"]
description = "Rust collections that are newtype wrappers around smallvec"
repository = "https://github.com/rklaehn/radixtree-rs"
license = "MIT OR Apache-2.0"
keywords = []
categories = ["data-structures"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/rklaehn"

[dependencies]
sorted-iter = "0.1"
num-traits = "0.2"
smallvec = "1.4"
rkyv = { version= "0.7.18", features = ["validation"] }
bytecheck = { version = "0.6.5" }
parking_lot = { version = "0.11.2" }
lazy_static = "1.4.0"
binary-merge = "0.1.1"
inplace-vec-builder = { version = "0.1.0", features = ["smallvec"] }
futures = "0.3.18"
anyhow = "1.0.49"
blake2b_simd = "1.0.0"
async-std = "1.10.0"
fnv = "1.0.7"
hex = "0.4.3"
salsa20 = "0.9.0"
rand = "0.8.4"
lz4_flex = "0.9.2"

[dev-dependencies]
quickcheck = "0.8"
maplit = "1.0.2"
quickcheck_macros = "0.8.0"
testdrop = "0.1.2"
lazy_static = "1.4.0"
num-traits = "0.2.8"
serde_json = "1.0.41"
criterion = "0.3.0"
fnv = "1.0.7"
anyhow = "1.0.32"
stats_alloc = "0.1.8"
rkyv = { version = "0.7.19", features = ["validation", "smallvec"] }
hex = "0.4.3"
hexdump = "0.1.1"
futures = "0.3.17"
tokio = { version = "1.13.0", features = ["full"] }
obey = "0.1.0"
proptest = "1.0.0"
async-std = { version = "1.10.0", features = ["attributes"] }

[[example]]
name = "radix_db"

[[example]]
name = "radix_tree"
